subprojects/glad2gles31/include/glad/gles2.h

#define __gl2_h_ 1
#define __gles2_gl2_h_ 1
#define __gl3_h_ 1
#define __gles2_gl3_h_ 1
#define GLAD_PLATFORM_H_
    #define GLAD_PLATFORM_WIN32 1
    #define GLAD_PLATFORM_WIN32 0
    #define GLAD_PLATFORM_APPLE 1
    #define GLAD_PLATFORM_APPLE 0
    #define GLAD_PLATFORM_EMSCRIPTEN 1
    #define GLAD_PLATFORM_EMSCRIPTEN 0
      #define GLAD_PLATFORM_UWP 1
    #define GLAD_PLATFORM_UWP 0
#define GLAD_UNUSED(x) (void)(x)
          #define GLAD_API_CALL __attribute__ ((dllexport)) extern
          #define GLAD_API_CALL __declspec(dllexport) extern
          #define GLAD_API_CALL __attribute__ ((dllimport)) extern
          #define GLAD_API_CALL __declspec(dllimport) extern
      #define GLAD_API_CALL __attribute__ ((visibility ("default"))) extern
      #define GLAD_API_CALL extern
    #define GLAD_API_CALL extern
  #define GLAD_API_PTR APIENTRY
  #define GLAD_API_PTR __stdcall
  #define GLAD_API_PTR
#define GLAPI GLAD_API_CALL
#define GLAPIENTRY GLAD_API_PTR
#define GLAD_MAKE_VERSION(major, minor) (major * 10000 + minor)
#define GLAD_VERSION_MAJOR(version) (version / 10000)
#define GLAD_VERSION_MINOR(version) (version % 10000)
#define GLAD_GENERATOR_VERSION "2.0.8"
typedef void (*GLADapiproc)(void);
typedef GLADapiproc (*GLADloadfunc)(const char *name);
typedef GLADapiproc (*GLADuserptrloadfunc)(void *userptr, const char *name);
typedef void (*GLADprecallback)(const char *name, GLADapiproc apiproc, int len_args, ...);
typedef void (*GLADpostcallback)(void *ret, const char *name, GLADapiproc apiproc, int len_args, ...);