source/glad2/gles2.d

/// Manually edited to compile.
/**
 * Loader generated by glad 2.0.8 on Sat Sep 12 16:51:39 2026
 *
 * SPDX-License-Identifier: (WTFPL OR CC0-1.0) AND Apache-2.0
 *
 * Generator: C/C++
 * Specification: gl
 * Extensions: 0
 *
 * APIs:
 *  - gles2=3.1
 *
 * Options:
 *  - ALIAS = False
 *  - DEBUG = False
 *  - HEADER_ONLY = False
 *  - LOADER = True
 *  - MX = False
 *  - ON_DEMAND = False
 *
 * Commandline:
 *    --api='gles2=3.1' --extensions='' c --loader
 *
 * Online:
 *    http://glad.sh/#api=gles2%3D3.1&extensions=&generator=c&options=LOADER
 *
 */

module glad2.gles2;

import core.stdc.config;
import glad2.khrplatform;

extern (C):

enum __gl2_h_ = 1;

enum __gles2_gl2_h_ = 1;

enum __gl3_h_ = 1;

enum __gles2_gl3_h_ = 1;

enum GLAD_PLATFORM_WIN32 = 0;

enum GLAD_PLATFORM_APPLE = 0;

enum GLAD_PLATFORM_EMSCRIPTEN = 0;

enum GLAD_PLATFORM_UWP = 0;

extern (D) auto GLAD_UNUSED(T)(auto ref T x)
{
    return cast(void) x;
}

version(none) {
enum GLAPI = GLAD_API_CALL;

enum GLAPIENTRY = GLAD_API_PTR;
}

extern (D) auto GLAD_MAKE_VERSION(T0, T1)(auto ref T0 major, auto ref T1 minor)
{
    return major * 10000 + minor;
}

extern (D) auto GLAD_VERSION_MAJOR(T)(auto ref T version_)
{
    return version_ / 10000;
}

extern (D) auto GLAD_VERSION_MINOR(T)(auto ref T version_)
{
    return version_ % 10000;
}

enum GLAD_GENERATOR_VERSION = "2.0.8";

alias GLADapiproc = void function ();

alias GLADloadfunc = void function (const(char)* name) function (const(char)* name);
alias GLADuserptrloadfunc = void function (void* userptr, const(char)* name) function (void* userptr, const(char)* name);

alias GLADprecallback = void function (const(char)* name, GLADapiproc apiproc, int len_args, ...);
alias GLADpostcallback = void function (void* ret, const(char)* name, GLADapiproc apiproc, int len_args, ...);

/* GLAD_PLATFORM_H_ */
